--- a/test/todos/app.html
+++ b/test/todos/app.html
@@ -26,7 +26,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="assets/javascripts/QuoJS-development.js"></script>
+    <script src="assets/javascripts/quo.debug.js"></script>
 
     <script src="../../src/build/monocle.js"></script>
     <script src="../../src/build/monocle.model.js"></script>
