--- a/test/todos/app.html
+++ b/test/todos/app.html
@@ -24,8 +24,7 @@
     </div>
   </div>
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="assets/javascripts/jquery.min.js"></script>
     <script src="assets/javascripts/quo.debug.js"></script>
 
     <script src="../../src/build/monocle.js"></script>
