--- a/test/todos/app.html
+++ b/test/todos/app.html
@@ -24,12 +24,7 @@
     </div>
   </div>
 
-
-  <!--
-    <script src="assets/javascripts/jquery.min.js"></script>
-    -->
-    <script src="assets/javascripts/quo.debug.js"></script>
-
+    <script src="https://raw.github.com/soyjavi/package-quojs/master/quo.js"></script>
     <script src="../../src/build/monocle.js"></script>
     <script src="../../src/build/monocle.model.js"></script>
     <script src="../../src/build/monocle.controller.js"></script>
