--- a/test/model/model.html
+++ b/test/model/model.html
@@ -5,11 +5,11 @@
 </head>
 <body>
     <script src="https://raw.github.com/soyjavi/package-quojs/master/quo.js"></script>
-    <script src="../src/build/monocle.js"></script>
-    <script src="../src/build/monocle.model.js"></script>
-    <script src="../src/build/monocle.controller.js"></script>
-    <script src="../src/build/monocle.view.js"></script>
-    <script src="../src/build/monocle.mustache.js"></script>
+    <script src="../../src/build/monocle.js"></script>
+    <script src="../../src/build/monocle.model.js"></script>
+    <script src="../../src/build/monocle.controller.js"></script>
+    <script src="../../src/build/monocle.view.js"></script>
+    <script src="../../src/build/monocle.mustache.js"></script>
 
     <script src="build/model.js"></script>
 </body>
