Include Template.js (Optimized Mustache Renderer)

--- a/examples/todos/app.html
+++ b/examples/todos/app.html
@@ -29,7 +29,7 @@
     <script src="../../src/build/monocle.model.js"></script>
     <script src="../../src/build/monocle.controller.js"></script>
     <script src="../../src/build/monocle.view.js"></script>
-    <script src="../../src/build/monocle.mustache.js"></script>
+    <script src="../../src/build/monocle.templayed.js"></script>
 
     <script src="build/app.js"></script>
 </body>
