--- a/examples/todos/app.html
+++ b/examples/todos/app.html
@@ -25,6 +25,9 @@
   </div>
 
     <script src="https://raw.github.com/soyjavi/package-quojs/master/quo.js"></script>
+    <!--
+    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    -->
     <script src="../../src/build/monocle.js"></script>
     <script src="../../src/build/monocle.model.js"></script>
     <script src="../../src/build/monocle.controller.js"></script>
